# alpha_mq

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  GEMINI.md  README.md  TodoWrite.md  alpha158_config.json  alphalens_data.py  check_alphalens_logic.py  check_dataset.py  check_qlib.py  debug_backtest.py  factor_framework.py  handler.py  main.py  make_subset.py  path_target.py  pyproject.toml  research_smv.ipynb  run_pipeline.py  workflow_by_code.py  workflow_by_code_path_target.py  workflow_rolling.py
.agents/rules/: project-type.md
.claude/skills/: convert-pdf-to-epub  cta-trend-development  proxmox-admin  resume-design-generation  steve-jobs-perspective  superpowers  using-superpowers
backtest/: config.py
configs/: alpha158.yaml  alpha_factor.yaml  alpha_factor_full.yaml  csi1000_data.yaml  csi1000_qlib.yaml  factor_filter_full.yaml  factor_filtering.yaml  factor_pool.yaml  factor_pool_full.yaml  model_pipeline.yaml  model_pipeline_full.yaml  model_pipeline_smoke.yaml  unified_data.yaml  workflow_config.yaml  workflow_config_fast.yaml
data/: downloader.py  factor_pool.parquet  factor_pool_full.parquet  handler.py  handler_fixed_beta.py  qlib_converter.py
data/csv_source/: SH000852.csv
data/model_results_full/: model_report.md
data/qlib_output/: quality_report.md
data/quality/: factor_report.md  (+1 more)
docs/: data_specification.md
factor/: dataset.py  handler.py  triple_barrier.py
model/: lgbm_ranking.py  qlib_model.py
reports/: ERC_tear_sheet.html  EW_tear_sheet.html  GMV_tear_sheet.html  HERC_tear_sheet.html  HRP_tear_sheet.html  MaxSharpe_tear_sheet.html  NCO_tear_sheet.html
reports_ml/: LightGBM_MVP_tear_sheet.html
scratch/: check_gm_history.py  check_gm_order.py  check_gm_order_percent.py  check_gm_run.py  check_gm_schedule.py  check_qlib_index.py  test_env.py
scripts/: convert_backend_to_qlib.py  download_fundamentals.py  download_gm.py  generate_full_config.py  merge_exports_to_qlib.py  run_pipeline.py  smoke_test_unified_pipeline.py
tests/: test_backtest_config.py  test_checkpoint.py  test_dataset.py  test_downloader.py  test_handler.py  test_imports.py  test_limiter.py  test_qlib_converter.py  test_qlib_model.py  test_triple_barrier.py
(+145858 files in other folders)
