[project]
name = "alpha-mq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alphalens",
    "alphalens-reloaded>=0.4.3",
    "gm>=3.0.183; sys_platform != 'darwin'",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "pyqlib>=0.9.7",
    "pytest>=9.0.3",
    "quantstats>=0.0.81",
    "riskfolio-lib>=7.2.1",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
alphalens = { git = "https://gitee.com/yunjinqi/alphalens.git" }
