[project]
name = "alpha-mq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.59",
    "alphalens",
    "alphalens-reloaded>=0.4.3",
    "fpdf2>=2.8.7",
    "gm>=3.0.183; sys_platform != 'darwin'",
    "lightgbm>=4.6.0",
    "markdown>=3.10.2",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "pyqlib>=0.9.7",
    "pytest>=9.0.3",
    "quantstats>=0.0.81",
    "reportlab>=4.5.0",
    "riskfolio-lib>=7.2.1",
    "rqalpha",
    "scikit-learn>=1.4",
    "tables",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
alphalens = { git = "https://gitee.com/yunjinqi/alphalens.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

# Note: extra-build-dependencies is not a valid uv field. 
# If rqalpha needs build-time fixes, consider using constraints or build isolation overrides.
